k8s/apps/storage/garage/deployment.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: garage
      app.kubernetes.io/instance: garage
  template:
    metadata:
      labels:
        app.kubernetes.io/name: garage
        app.kubernetes.io/instance: garage
    spec:
      tolerations:
        - key: emnt.dev/on-nas
          operator: Exists
          effect: NoSchedule
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: emnt.dev/on-nas
                    operator: Exists
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        fsGroupChangePolicy: "OnRootMismatch"
        runAsNonRoot: true
      containers:
        - name: garage
          image: docker.io/dxflrs/garage:v2.2.0
          securityContext:
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: true
          resources:
            requests:
              memory: 512Mi
              cpu: 100m
            limits:
              memory: 1024Mi
          ports:
            - containerPort: 3900
              name: s3-api
            - containerPort: 3902
              name: web-api
            - containerPort: 3903
              name: admin
          volumeMounts:
            - name: config
              mountPath: /etc/garage.toml
              subPath: garage.toml
            - name: meta
              mountPath: /mnt/meta
            - name: data
              mountPath: /mnt/data
      volumes:
        - name: config
          configMap:
            name: config
        - name: meta
          persistentVolumeClaim:
            claimName: meta
        - name: data
          persistentVolumeClaim:
            claimName: data
