k8s/apps/storage/garage/svc.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: garage
  namespace: garage
  labels:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: garage
    app.kubernetes.io/instance: garage
  ports:
    - name: s3-api
      port: 3900
      targetPort: s3-api
      protocol: TCP
    - name: web-api
      port: 3902
      targetPort: web-api
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: admin
      protocol: TCP
